Moved widget to sub folder

--- a/testPage.html
+++ b/testPage.html
@@ -12,7 +12,7 @@
     wWidth = "800px"; 
     wHeight = "195px";
     document.write('<div id="myFirstWidget"></div>');
-    document.write('<scr'+'ipt type="text/JavaScript" src="WidgetCreate.js"></scr'+'ipt>');
+    document.write('<scr'+'ipt type="text/JavaScript" src="mifareWidget/WidgetCreate.js"></scr'+'ipt>');
 </script>
 <!--Widget Code Ends-->
 
